--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:padding="16dp"
     android:layout_margin="16dp"
     android:fitsSystemWindows="true">
 
@@ -15,17 +14,63 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:counterEnabled="true"
-        app:counterMaxLength="10"
-        app:passwordToggleEnabled="true"
         app:counterOverflowTextColor="@android:color/holo_red_dark">
 
       <com.google.android.material.textfield.TextInputEditText
           android:layout_width="match_parent"
           android:layout_height="match_parent"
-          android:hint="@string/password"
-          android:inputType="textPassword"
-          android:maxLength="10"/>
+          android:hint="@string/et_service"
+          android:inputType="numberDecimal"/>
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tv_tip"
+        android:textColor="@color/grey"/>
+
+    <RadioGroup
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checkedButton="@id/rb_amazing">
+        <RadioButton
+            android:id="@+id/rb_amazing"
+            android:text="@string/amazing_20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/RadioButton"/>
+        <RadioButton
+            android:id="@+id/rb_good"
+            android:text="@string/good_18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/RadioButton"/>
+        <RadioButton
+            android:id="@+id/rb_ok"
+            android:text="@string/ok_15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/RadioButton"/>
+    </RadioGroup>
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switch_round_tip"
+        android:text="@string/round_up_tip"
+        android:checked="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/btn_calculate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/calculate"/>
+
+    <TextView
+        android:id="@+id/tv_tip_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/tip_amount"
+        android:layout_gravity="end"/>
 </LinearLayout>
