--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:layout_margin="16dp"
-    android:fitsSystemWindows="true">
+    android:padding="15dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:counterOverflowTextColor="@android:color/holo_red_dark">
+        android:fitsSystemWindows="true">
 
       <com.google.android.material.textfield.TextInputEditText
+          android:id="@+id/et_service"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:hint="@string/et_service"
-          android:inputType="numberDecimal"/>
+          android:inputType="numberDecimal"
+          />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
