--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,78 +4,80 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".MainActivity"
     android:padding="15dp"
-    android:fitsSystemWindows="true">
+    tools:context=".MainActivity">
 
     <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_service"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/et_service"
-            android:inputType="numberDecimal"
-            />
+            android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tv_tip"
-        android:textColor="@color/grey"/>
+        android:textColor="@color/grey" />
 
     <RadioGroup
-        android:orientation="horizontal"
-        android:weightSum="3"
         android:id="@+id/group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checkedButton="@id/rb_amazing">
+        android:checkedButton="@id/rb_amazing"
+        android:orientation="horizontal"
+        android:weightSum="3">
+
         <RadioButton
             android:id="@+id/rb_amazing"
-            android:text="@string/amazing_20"
+            style="@style/RadioButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/RadioButton"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="@string/amazing_20" />
+
         <RadioButton
             android:id="@+id/rb_good"
-            android:text="@string/good_18"
+            style="@style/RadioButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/RadioButton"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="@string/good_18" />
+
         <RadioButton
             android:id="@+id/rb_ok"
-            android:text="@string/ok_15"
+            style="@style/RadioButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            style="@style/RadioButton"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:text="@string/ok_15" />
     </RadioGroup>
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switch_round_tip"
-        android:text="@string/round_up_tip"
-        android:checked="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="@string/round_up_tip" />
 
     <Button
         android:id="@+id/btn_calculate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/calculate"/>
+        android:text="@string/calculate" />
 
     <TextView
         android:id="@+id/tv_tip_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tip_amount"
-        android:layout_gravity="end"/>
+        android:layout_gravity="end"
+        android:text="@string/tip_amount" />
 </LinearLayout>
